# Audio-Analysis

./: .gitignore  Makefile  README.md  convert.cpp  test.mid  test_transposed.mid
include/: MidiModifier.h
nn/nets/: WavMidNet1Lv5.json
nn/soundfont/: SF2patch.cpp  SF2patch.h
nn/synthesis/soundfont/: SF2patch.cpp  SF2patch.h
nn/synthesis/wavetablesynth/: CMakeLists.txt  Makefile  WaveTableOsc.cpp  WaveTableOsc.h  main.cpp  mainBeta.cpp  mainEnum.cpp
soundfont/: GMGSx_nnn.sf2
src-library/: MidiModifier.cpp
